--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 	"dependencies": {
 		"npm": "^5.0.3",
 		"react": "16.0.0-alpha.6",
-		"react-native": "^0.44.3"
+		"react-native": "^0.44.3",
+		"react-native-linear-gradient": "^2.0.0"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
