--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"expo": "^17.0.0",
 		"firebase": "^4.1.2",
 		"npm": "^5.0.3",
 		"react": "16.0.0-alpha.6",
