--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"react-native-linear-gradient": "^2.0.0",
 		"react-native-navigation": "^1.1.118",
 		"react-native-router-flux": "^3.40.1",
+		"react-native-scrollable-tab-view": "^0.6.7",
+		"react-native-search-bar": "^3.0.0",
 		"react-native-settings-list": "^1.6.1",
 		"react-native-swiper": "^1.5.4",
 		"react-native-vector-icons": "^4.2.0"
