--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"react-native-fbsdk": "^0.6.1",
 		"react-native-fbsdklogin": "0.0.8",
 		"react-native-grid-view": "^0.4.1",
+		"react-native-icons": "^0.7.1",
 		"react-native-linear-gradient": "^2.0.0",
 		"react-native-navigation": "^1.1.118",
 		"react-native-router-flux": "^3.40.1",
