--- a/ios/tess/Info.plist
+++ b/ios/tess/Info.plist
@@ -84,5 +84,9 @@
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
 	</array>
+
+<key>NSMicrophoneUsageDescription</key>
+<string>This sample uses the microphone to record your speech and convert it to text.</string>
+
 </dict>
 </plist>
