--- a/ios/tess/Info.plist
+++ b/ios/tess/Info.plist
@@ -86,7 +86,7 @@
 	</array>
 
 <key>NSMicrophoneUsageDescription</key>
-<string>This sample uses the microphone to record your speech and convert it to text.</string>
+<string>Tess uses your microphone to create a podcast.</string>
 
 </dict>
 </plist>
