--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"react": "16.0.0-alpha.6",
 		"react-native": "^0.44.3",
 		"react-native-audio": "^3.2.2",
+		"react-native-button": "^2.1.0",
 		"react-native-elements": "^0.14.0",
 		"react-native-fbsdk": "^0.6.1",
 		"react-native-fbsdklogin": "0.0.8",
@@ -20,14 +21,17 @@
 		"react-native-icons": "^0.7.1",
 		"react-native-linear-gradient": "^2.0.0",
 		"react-native-navigation": "^1.1.118",
+		"react-native-redux-router": "^1.0.7",
 		"react-native-router-flux": "^3.40.1",
 		"react-native-scrollable-tab-view": "^0.6.7",
 		"react-native-search-bar": "^3.0.0",
 		"react-native-settings-list": "^1.6.1",
+		"react-native-slider": "^0.10.0",
 		"react-native-sound": "^0.10.3",
 		"react-native-swiper": "^1.5.4",
 		"react-native-switch": "^1.1.0",
-		"react-native-vector-icons": "^4.2.0"
+		"react-native-vector-icons": "^4.2.0",
+		"react-native-video": "^1.2.0"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
