--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"expo": "^17.0.0",
 		"firebase": "^4.1.2",
+		"lodash": "^4.17.4",
 		"npm": "^5.0.3",
 		"react": "16.0.0-alpha.6",
 		"react-native": "^0.44.3",
@@ -31,7 +32,10 @@
 		"react-native-swiper": "^1.5.4",
 		"react-native-switch": "^1.1.0",
 		"react-native-vector-icons": "^4.2.0",
-		"react-native-video": "^1.2.0"
+		"react-native-video": "^1.2.0",
+		"react-redux": "^5.0.6",
+		"redux": "^3.7.2",
+		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
