--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react-native-elements": "^0.14.0",
 		"react-native-fbsdk": "^0.6.1",
 		"react-native-fbsdklogin": "0.0.8",
+		"react-native-fetch-blob": "^0.10.7",
 		"react-native-grid-view": "^0.4.1",
 		"react-native-icons": "^0.7.1",
 		"react-native-linear-gradient": "^2.0.0",
@@ -31,6 +32,7 @@
 		"react-native-sound": "^0.10.3",
 		"react-native-swiper": "^1.5.4",
 		"react-native-switch": "^1.1.0",
+		"react-native-testkit": "^0.1.4",
 		"react-native-vector-icons": "^4.2.0",
 		"react-native-video": "^1.2.0",
 		"react-redux": "^5.0.6",
