--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"react-native-scrollable-tab-view": "^0.6.7",
 		"react-native-search-bar": "^3.0.0",
 		"react-native-settings-list": "^1.6.1",
+		"react-native-simple-picker": "^1.4.3",
 		"react-native-slider": "^0.10.0",
 		"react-native-sound": "^0.10.3",
 		"react-native-swiper": "^1.5.4",
