--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-native-app-intro": "^1.1.5",
 		"react-native-audio": "^3.2.2",
 		"react-native-button": "^2.1.0",
+		"react-native-dropdownalert": "^3.1.2",
 		"react-native-elements": "^0.14.0",
 		"react-native-fbsdk": "^0.6.1",
 		"react-native-fbsdklogin": "0.0.8",
