--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
 		"react-native-settings-list": "^1.6.1",
 		"react-native-simple-picker": "^1.4.3",
 		"react-native-slider": "^0.10.0",
-		"react-native-sound": "^0.10.3",
+		"react-native-sound": "^0.10.4",
 		"react-native-swiper": "^1.5.4",
 		"react-native-switch": "^1.1.0",
 		"react-native-testkit": "^0.1.4",
@@ -52,5 +52,11 @@
 	},
 	"jest": {
 		"preset": "react-native"
+	},
+
+	"rnpm": {
+		"assets": [
+			"./src/assets/fonts/"
+		]
 	}
 }
