--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-native-fetch-blob": "^0.10.7",
 		"react-native-grid-view": "^0.4.1",
 		"react-native-icons": "^0.7.1",
+		"react-native-image-crop-picker": "^0.18.1",
 		"react-native-linear-gradient": "^2.0.0",
 		"react-native-navigation": "^1.1.275",
 		"react-native-popup-dialog": "^0.9.35",
