--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"expo": "^17.0.0",
 		"firebase": "^4.1.2",
+		"inquirer": "^4.0.1",
 		"lodash": "^4.17.4",
 		"npm": "^5.0.3",
 		"react": "16.0.0-alpha.6",
