--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"react-native-elements": "^0.14.0",
 		"react-native-fetch-blob": "^0.10.7",
 		"react-native-grid-view": "^0.4.1",
+		"react-native-html-parser": "0.0.5",
 		"react-native-icons": "^0.7.1",
 		"react-native-image-crop-picker": "^0.18.1",
 		"react-native-invertible-scroll-view": "^1.1.0",
