Bug Fixes/Improvements
-From People You Follow list on home page now shows in order from newest
-Improved styling for smaller phones (account page/bottom player)
-I may have fixed the bug that restarts the app (let me know if it still happens thx)

--- a/ios/tess/Info.plist
+++ b/ios/tess/Info.plist
@@ -80,7 +80,9 @@
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>fetch</string>
 		<string>audio</string>
+		<string>remote-notification</string>
 	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
