Start of Android Branch
-Can get android open (at startup screen)
-Once logged in, app crashes
this gon be fun

--- a/ios/tess/Info.plist
+++ b/ios/tess/Info.plist
@@ -60,7 +60,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>Tess will need to use your camera so that you can take a profile image.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Tess uses your microphone to create a podcast.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
@@ -77,6 +77,7 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>Montserrat-Regular.otf</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
