Lots of work done
looking good. skeleton is nearly done. cleeean

--- a/ios/tess/Info.plist
+++ b/ios/tess/Info.plist
@@ -77,7 +77,8 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
-		<string>Montserrat-Regular.otf</string>
+		<string>Montserrat-Regular.ttf</string>
+		<string>Montserrat-SemiBold.ttf</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
