--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"@ptomasroos/react-native-multi-slider": "0.0.12",
 		"expo": "^17.0.0",
 		"firebase": "^4.1.2",
 		"inquirer": "^4.0.1",
