--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -134,6 +134,7 @@ dependencies {
     compile project(':react-native-fetch-blob')
     compile project(':react-native-navigation')
     compile project(':react-native-video')
+    compile project(':react-native-share')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:25.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
