--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "com.android.application"
+apply plugin: 'com.google.gms.google-services'
 
 import com.android.build.OutputFile
 
@@ -135,7 +136,9 @@ dependencies {
     compile project(':react-native-navigation')
     compile project(':react-native-video')
     compile project(':react-native-share')
+    compile project(':react-native-firebase-analytics')
     compile fileTree(dir: "libs", include: ["*.jar"])
+    compile 'com.google.firebase:firebase-core:15.0.0'
     compile "com.android.support:appcompat-v7:25.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
