--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -17,6 +17,8 @@ include ':react-native-video'
 project(':react-native-video').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-video/android')
 include ':react-native-share'
 project(':react-native-share').projectDir = new File(rootProject.projectDir, 	'../node_modules/react-native-share/android')
+include ':react-native-firebase-analytics'
+project(':react-native-firebase-analytics').projectDir = new File(rootProject.projectDir, 	'../node_modules/react-native-firebase-analytics/android')
 
 
 include ':app'
