--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 		"@ptomasroos/react-native-multi-slider": "0.0.12",
 		"expo": "^17.0.0",
 		"firebase": "^4.1.2",
+		"firebase-admin": "^5.12.1",
+		"firebase-functions": "^1.0.4",
 		"inquirer": "^4.0.1",
 		"lodash": "^4.17.4",
 		"npm": "^5.0.3",
@@ -21,6 +23,7 @@
 		"react-native-deck-swiper": "^1.5.14",
 		"react-native-dropdownalert": "^3.1.2",
 		"react-native-elements": "^0.14.0",
+		"react-native-fcm": "^15.0.2",
 		"react-native-fetch-blob": "^0.10.7",
 		"react-native-firebase": "^4.0.7",
 		"react-native-firebase-analytics": "^4.0.2",
