--- a/functions/package.json
+++ b/functions/package.json
@@ -14,7 +14,8 @@
     "firebase-admin": "~5.12.1",
     "firebase-functions": "^1.0.3",
     "lodash": "^4.17.10",
-    "node-fetch": "^2.1.2"
+    "node-fetch": "^2.1.2",
+    "react-native-html-parser": "0.0.5"
   },
   "devDependencies": {
     "eslint": "^4.12.0",
