--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
 		"react-native-swipe-gestures": "^1.0.2",
 		"react-native-swiper": "^1.5.4",
 		"react-native-switch": "^1.1.0",
+		"react-native-tab-view": "^1.0.2",
 		"react-native-testkit": "^0.1.4",
 		"react-native-textinput-effects": "^0.4.0",
 		"react-native-vector-icons": "^4.2.0",
