--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         </provider>
       <activity
         android:name=".MainActivity"
+          android:launchMode="singleTask"
         android:label="@string/app_name"
           android:theme="@style/SplashScreen"
         android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
@@ -39,11 +40,21 @@
             <category android:name="android.intent.category.LAUNCHER" />
             <action android:name="android.intent.action.DOWNLOAD_COMPLETE"/>
         </intent-filter>
-          <intent-filter android:label="filter_react_native">
+          <intent-filter>
               <action android:name="android.intent.action.VIEW" />
               <category android:name="android.intent.category.DEFAULT" />
               <category android:name="android.intent.category.BROWSABLE" />
-              <data android:scheme="tess" android:host="listen" /> // A
+              <data android:scheme="tess"
+                  android:host="listen"
+                  />
+          </intent-filter>
+          <intent-filter>
+              <action android:name="android.intent.action.VIEW" />
+              <category android:name="android.intent.category.DEFAULT" />
+              <category android:name="android.intent.category.BROWSABLE" />
+              <data android:scheme="tess"
+                  android:host="highlight"
+                  />
           </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
