--- a/ios/tess/Info.plist
+++ b/ios/tess/Info.plist
@@ -63,13 +63,13 @@
 		</dict>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>Tess will need to use your camera so that you can take a profile image.</string>
+	<string>Tess will need to use your camera to take pictures.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>Tess uses your microphone to create a podcast.</string>
+	<string>Tess will need to use your microphone to record.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Tess will need to use your photo library so that you can upload an profile image.</string>
+	<string>Tess will need to use your photo library to upload a profile image.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Montserrat-Bold.ttf</string>
