--- a/ios/Podfile
+++ b/ios/Podfile
@@ -14,6 +14,7 @@ target 'tess' do
   pod 'Crashlytics', '~> 3.10.1'
   pod 'Firebase/Performance'
   pod 'Firebase/Messaging'
+  pod 'Firebase/DynamicLinks'
 
   
 
