--- a/ios/tess/Info.plist
+++ b/ios/tess/Info.plist
@@ -29,6 +29,18 @@
 				<string>fb820280631481558</string>
 			</array>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLIconFile</key>
+			<string>/Users/nickruspantini/TessMobile/tessLogoIcon.jpg</string>
+			<key>CFBundleURLName</key>
+			<string>Bundle ID</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>org.reactjs.native.example.tess</string>
+			</array>
+		</dict>
 	</array>
 	<key>CFBundleVersion</key>
 	<string>21</string>
