--- a/ios/tess/tess.entitlements
+++ b/ios/tess/tess.entitlements
@@ -7,6 +7,7 @@
 	<key>com.apple.developer.associated-domains</key>
 	<array>
 		<string>applinks:tess.fm</string>
+		<string>applinks:tessopen.page.link</string>
 	</array>
 </dict>
 </plist>
