--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"react-native-animated-linear-gradient": "^1.1.2",
 		"react-native-app-intro": "^1.1.5",
 		"react-native-audio": "^3.2.2",
+		"react-native-awesome-alerts": "^1.0.7",
 		"react-native-button": "^2.1.0",
 		"react-native-deck-swiper": "^1.5.14",
 		"react-native-dropdownalert": "^3.1.2",
