--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"react-native-navigation": "^1.1.411",
 		"react-native-popup-dialog": "^0.9.35",
 		"react-native-redux-router": "^1.0.7",
+		"react-native-render-html": "^3.10.0",
 		"react-native-scrollable-tab-view": "^0.8.0",
 		"react-native-search-bar": "^3.0.0",
 		"react-native-settings-list": "^1.6.1",
