--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -84,9 +84,16 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
+    signingConfigs {
+        release {
+            keyAlias 'tessAndroidKey'
+            keyPassword 'nicknick'
+            storeFile file('/Users/nickruspantini/TessMobile/android/keystores/android.jks')
+            storePassword 'nicknick'
+        }
+    }
     compileSdkVersion 25
     buildToolsVersion "25.0.1"
-
     defaultConfig {
         applicationId "com.tess"
         minSdkVersion 16
@@ -96,6 +103,7 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
+        vectorDrawables.useSupportLibrary = true
     }
     splits {
         abi {
@@ -109,6 +117,7 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
     // applicationVariants are e.g. debug, release
@@ -116,7 +125,7 @@ android {
         variant.outputs.each { output ->
             // For each separate APK per architecture, set a unique version code as described here:
             // http://tools.android.com/tech-docs/new-build-system/user-guide/apk-splits
-            def versionCodes = ["armeabi-v7a":1, "x86":2]
+            def versionCodes = ["armeabi-v7a": 1, "x86": 2]
             def abi = output.getFilter(OutputFile.ABI)
             if (abi != null) {  // null for the universal-debug, universal-release variants
                 output.versionCodeOverride =
@@ -137,10 +146,12 @@ dependencies {
     compile project(':react-native-video')
     compile project(':react-native-share')
     compile project(':react-native-firebase-analytics')
-    compile fileTree(dir: "libs", include: ["*.jar"])
+    compile project(':react-native-image-crop-picker')
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.google.firebase:firebase-core:15.0.0'
-    compile "com.android.support:appcompat-v7:25.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.facebook.react:react-native:+'
+    // From node_modules
     compile 'com.squareup.okhttp3:okhttp:3.4.1'
 }
 
