--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -19,6 +19,8 @@ include ':react-native-share'
 project(':react-native-share').projectDir = new File(rootProject.projectDir, 	'../node_modules/react-native-share/android')
 include ':react-native-firebase-analytics'
 project(':react-native-firebase-analytics').projectDir = new File(rootProject.projectDir, 	'../node_modules/react-native-firebase-analytics/android')
+include ':react-native-image-crop-picker'
+project(':react-native-image-crop-picker').projectDir = new File(settingsDir, '../node_modules/react-native-image-crop-picker/android')
 
 
 include ':app'
