--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"@ptomasroos/react-native-multi-slider": "0.0.12",
+		"babel-plugin-transform-remove-console": "^6.9.4",
 		"expo": "^17.0.0",
 		"firebase": "^4.1.2",
 		"firebase-admin": "^5.12.1",
