--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"inquirer": "^4.0.1",
 		"lodash": "^4.17.4",
 		"npm": "^5.0.3",
+		"prop-types": "^15.6.2",
 		"react": "16.0.0-alpha.6",
 		"react-native": "^0.44.3",
 		"react-native-animatable": "^1.3.0",
