--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
+		"babel-plugin-transform-remove-console": "^6.9.4",
 		"babel-preset-react-native": "1.9.2",
 		"jest": "20.0.4",
 		"react-test-renderer": "16.0.0-alpha.6"
